@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:26:15 brook Exp $
+
+R_PKGNAME=	whisker
+R_PKGVER=	0.3-2
+CATEGORIES=	devel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	'mustache' for R, logicless templating
+LICENSE=	gnu-gpl-v3
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
