@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:26:15 brook Exp $
+
+SHA1 (R/whisker_0.3-2.tar.gz) = 99c47579b0c6c5cbb57df2bd021be2e49f00dc00
+RMD160 (R/whisker_0.3-2.tar.gz) = 12680557e87bdba6be61d6aace1ddb6d61a01670
+SHA512 (R/whisker_0.3-2.tar.gz) = 9eb82854fcc06f38371613191d5fac4dd1a11dee2399a2035341055772d7b8fb7941620f77eea560944a99a4c9bb5ec0ca7ee8e15a085040f4e0c5393f08a09a
+Size (R/whisker_0.3-2.tar.gz) = 27707 bytes
