@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3341 2019/08/09 17:43:22 adam Exp $
+$NetBSD: CHANGES-2019,v 1.3342 2019/08/09 18:26:15 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5464,3 +5464,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated games/flare-engine to 1.11 [nia 2019-08-09]
 	Updated games/flare-game to 1.11 [nia 2019-08-09]
 	Updated x11/qt5 to 5.13.0 [adam 2019-08-09]
+	Added devel/R-whisker version 0.3.2 [brook 2019-08-09]
